# diwrappers

./: LICENSE  README.md  bandit.yml  pyproject.toml  test.py
.github/workflows/: python-package.yml  python-publish.yml  qa.yml  qa_post_release.yml  test.yml
diwrappers/: __init__.py  _async_contextual_dependency.py  _async_dependency.py  _configurable_dependency.py  _contextual_dependency.py  _data.py  _dependency.py
diwrappers/_commons/: _exceptions.py
examples/: __main__.py  pyproject.toml
pyinject/: __init__.py  main.py
