[tool.poetry]
name = "pyinject"
version = "0.0.1"
description = ""
authors = ["Rui Campos <mail@ruicampos.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.20.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
